# homo-memetus-ai

./: README.md  pyproject.toml
utils/: prompt_advisor.py  report_generator.py  search_utils.py  token_data_capture_utils.py  token_scrapper.py
